2003-10-30  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Jay Fenlason <fenlason@redhat.com>

	* server-src/dumper.c: Don't set SIGCHLD to SIG_IGN.

2003-10-30  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Andrew Rucker Jones <arjones@simultan.dyndns.org>

	* client-src/sendbackup-gnutar.c (AM_SIZE_RE): Fix regex for samba3.

2003-10-27  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amadmin.c (find): Call find_dump to allow dynamic disklist.
	* server-src/amindexd.c: Call find_dump to allow dynamic disklist.
	* server-src/amtrmidx.c:  Call find_dump to allow dynamic disklist.
	* server-src/diskfile.c (add_disk): Set device and todo.
	* server-src/find.c: Build disklist dynamicaly from log files.
	* server-src/find.h (find_dump): New prototype.

2003-10-27  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amlogroll.c: set_pname("amlogroll").

2003-10-24  Todd M. Kover <kovert@omniscient.com>

	* add amqde for "quick and dirty estimates" under gnutar (program
	  that will traverse the filesystem rather than invoke gnutar).
	  controlled via configure option --with-qde.  This really wants to
	  be configured in the server.

2003-10-24  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amverify.sh.in: Fix usage message.
	* common-src/fileheader.c (print_header): fprintf to outf.
	* server-src/tapefile.c (lookup_last_reusable_tape): Check for
	  tp->datestamp > 0.
	* server-src/amadmin.c (disklist_one): Don't print ':' on device line.

2003-10-23  Todd Kover <kovert@omniscient.com>

	* make amrecover link against readline rather than libamanda so
	  only amrecover would require the shared library (if it's found)

2003-10-22  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Paul Bijnens <paul.bijnens@xplanation.com>

	* client-src/amandates.c (finish_amandates): Call error() if the
	  close of amdf fail.
	* common-src/amflock.c (create_lock): Return -1 if the close of f fail.